<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/info_relative_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_data_tv"
        android:text="@string/data_by_str"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_above="@+id/info_open_data_url"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_data_site_str"
        android:onClick="openOpenDataSite"
        android:id = "@+id/info_open_data_url"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_above="@+id/info_logo_iv"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black" />
    <ImageView
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:id="@+id/info_logo_iv"
        android:contentDescription="@string/logo_of_open_data_wroclaw"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_auth_tv"
        android:text="@string/created_by_jan_stoltman"
        android:layout_above="@+id/info_contact_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_contact_tv"
        android:text="@string/contact_stoltmanjan_gmail_com"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/info_logo_iv"
        android:layout_alignEnd="@+id/info_logo_iv"
        android:textColor="@color/white"
        android:textSize="12sp"/>

</RelativeLayout>